{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 137,
  "lineage": "4a9cdbd7-c8a9-1a0b-a8d0-796812037bd2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03a0d808736ffc520",
            "arn": "arn:aws:ec2:us-east-1:604823614160:elastic-ip/eipalloc-03a0d808736ffc520",
            "association_id": "eipassoc-040229a90853be08d",
            "domain": "vpc",
            "id": "eipalloc-03a0d808736ffc520",
            "network_border_group": "us-east-1",
            "network_interface": "eni-00872f7da0981a6b3",
            "private_dns": "ip-10-0-1-147.ec2.internal",
            "private_ip": "10.0.1.147",
            "public_dns": "ec2-13-218-253-4.compute-1.amazonaws.com",
            "public_ip": "13.218.253.4",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:604823614160:internet-gateway/igw-0453dcfd6cea5d43a",
            "id": "igw-0453dcfd6cea5d43a",
            "owner_id": "604823614160",
            "tags": {
              "Name": "url-shortener-igw"
            },
            "tags_all": {
              "Name": "url-shortener-igw"
            },
            "vpc_id": "vpc-079b3d8894490ca96"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "admin",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:604823614160:loadbalancer/app/url-shortener-admin-lb/f16dc4d25a2615ee",
            "arn_suffix": "app/url-shortener-admin-lb/f16dc4d25a2615ee",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "url-shortener-admin-lb-569316848.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:604823614160:loadbalancer/app/url-shortener-admin-lb/f16dc4d25a2615ee",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "url-shortener-admin-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-067d700da7d866ddf"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-002857be3ba0d584e"
              },
              {
                "subnet_id": "subnet-0b71b9cecdee4e84b"
              }
            ],
            "subnets": [
              "subnet-002857be3ba0d584e",
              "subnet-0b71b9cecdee4e84b"
            ],
            "vpc_id": "vpc-079b3d8894490ca96",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "admin",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:604823614160:listener/app/url-shortener-admin-lb/f16dc4d25a2615ee/042535364e77d60b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:604823614160:targetgroup/url-shortener-admin-tg/08c38081e45fdabf",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:604823614160:listener/app/url-shortener-admin-lb/f16dc4d25a2615ee/042535364e77d60b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:604823614160:loadbalancer/app/url-shortener-admin-lb/f16dc4d25a2615ee",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.admin",
            "aws_lb_target_group.admin",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "admin",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:604823614160:targetgroup/url-shortener-admin-tg/08c38081e45fdabf",
            "arn_suffix": "targetgroup/url-shortener-admin-tg/08c38081e45fdabf",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:604823614160:targetgroup/url-shortener-admin-tg/08c38081e45fdabf",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:604823614160:loadbalancer/app/url-shortener-admin-lb/f16dc4d25a2615ee"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "url-shortener-admin-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-079b3d8894490ca96"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03a0d808736ffc520",
            "association_id": "eipassoc-040229a90853be08d",
            "connectivity_type": "public",
            "id": "nat-04d25da675c20d357",
            "network_interface_id": "eni-00872f7da0981a6b3",
            "private_ip": "10.0.1.147",
            "public_ip": "13.218.253.4",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b71b9cecdee4e84b",
            "tags": {
              "Name": "url-shortener-nat"
            },
            "tags_all": {
              "Name": "url-shortener-nat"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:604823614160:route-table/rtb-02e80b4146e101187",
            "id": "rtb-02e80b4146e101187",
            "owner_id": "604823614160",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04d25da675c20d357",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "url-shortener-private-rt"
            },
            "tags_all": {
              "Name": "url-shortener-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-079b3d8894490ca96"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:604823614160:route-table/rtb-0ed9b4a2be3da5543",
            "id": "rtb-0ed9b4a2be3da5543",
            "owner_id": "604823614160",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0453dcfd6cea5d43a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "url-shortener-public-rt"
            },
            "tags_all": {
              "Name": "url-shortener-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-079b3d8894490ca96"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04ed0802787c26cba",
            "route_table_id": "rtb-02e80b4146e101187",
            "subnet_id": "subnet-02bcf3696fda5e963"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bd1d6299c75e7201",
            "route_table_id": "rtb-02e80b4146e101187",
            "subnet_id": "subnet-0e926d0643f4a1e8a"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01a2bdaf271d54ffe",
            "route_table_id": "rtb-0ed9b4a2be3da5543",
            "subnet_id": "subnet-0b71b9cecdee4e84b"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0968ff307b77ffc04",
            "route_table_id": "rtb-0ed9b4a2be3da5543",
            "subnet_id": "subnet-002857be3ba0d584e"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "admin_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:604823614160:security-group/sg-01d1e05ada85d56a6",
            "description": "Security group for admin service",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01d1e05ada85d56a6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "url-shortener-admin-service",
            "name_prefix": "",
            "owner_id": "604823614160",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-079b3d8894490ca96"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:604823614160:security-group/sg-067d700da7d866ddf",
            "description": "Security group for admin ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-067d700da7d866ddf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "url-shortener-alb-sg",
            "name_prefix": "",
            "owner_id": "604823614160",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-079b3d8894490ca96"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:604823614160:security-group/sg-0babb33fffce9e39f",
            "description": "Allow traffic to VPC endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0babb33fffce9e39f",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "url-shortener-vpc-endpoints",
            "name_prefix": "",
            "owner_id": "604823614160",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-079b3d8894490ca96"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:604823614160:subnet/subnet-02bcf3696fda5e963",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02bcf3696fda5e963",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "604823614160",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "url-shortener-private-1"
            },
            "tags_all": {
              "Name": "url-shortener-private-1"
            },
            "vpc_id": "vpc-079b3d8894490ca96"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:604823614160:subnet/subnet-0e926d0643f4a1e8a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e926d0643f4a1e8a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "604823614160",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "url-shortener-private-2"
            },
            "tags_all": {
              "Name": "url-shortener-private-2"
            },
            "vpc_id": "vpc-079b3d8894490ca96"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:604823614160:subnet/subnet-0b71b9cecdee4e84b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b71b9cecdee4e84b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "604823614160",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "url-shortener-public-1"
            },
            "tags_all": {
              "Name": "url-shortener-public-1"
            },
            "vpc_id": "vpc-079b3d8894490ca96"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:604823614160:subnet/subnet-002857be3ba0d584e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-002857be3ba0d584e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "604823614160",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "url-shortener-public-2"
            },
            "tags_all": {
              "Name": "url-shortener-public-2"
            },
            "vpc_id": "vpc-079b3d8894490ca96"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:604823614160:vpc/vpc-079b3d8894490ca96",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0364b415bddbbb4a7",
            "default_route_table_id": "rtb-02f8430fa9dbaeb1a",
            "default_security_group_id": "sg-0c37d2c2d5f0f1f94",
            "dhcp_options_id": "dopt-0196805dcda3a809d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-079b3d8894490ca96",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02f8430fa9dbaeb1a",
            "owner_id": "604823614160",
            "tags": {
              "Name": "url-shortener-vpc"
            },
            "tags_all": {
              "Name": "url-shortener-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dynamodb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:604823614160:vpc-endpoint/vpce-024f021136337a501",
            "cidr_blocks": [
              "35.71.70.0/24",
              "3.218.182.0/24",
              "3.218.180.0/23",
              "35.71.68.0/23",
              "52.94.0.0/22",
              "52.119.224.0/20"
            ],
            "id": "vpce-024f021136337a501",
            "owner_id": "604823614160",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-02cd2c6b",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-02e80b4146e101187"
            ],
            "service_name": "com.amazonaws.us-east-1.dynamodb",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-079b3d8894490ca96"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sqs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:604823614160:vpc-endpoint/vpce-0346590dec5803ef3",
            "dns_entry": [
              {
                "dns_name": "vpce-0346590dec5803ef3-2izf7745.sqs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0346590dec5803ef3-2izf7745-us-east-1b.sqs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0346590dec5803ef3-2izf7745-us-east-1a.sqs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "sqs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z03544701LS630V4VSKBT"
              },
              {
                "dns_name": "sqs.us-east-1.api.aws",
                "hosted_zone_id": "Z0397503254XO3LNYGVP8"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0346590dec5803ef3",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-07c69abbd746ad516",
              "eni-08204f656eea6ae21"
            ],
            "owner_id": "604823614160",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0babb33fffce9e39f"
            ],
            "service_name": "com.amazonaws.us-east-1.sqs",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.10.252",
                "subnet_id": "subnet-02bcf3696fda5e963"
              },
              {
                "ipv4": "10.0.11.110",
                "subnet_id": "subnet-0e926d0643f4a1e8a"
              }
            ],
            "subnet_ids": [
              "subnet-02bcf3696fda5e963",
              "subnet-0e926d0643f4a1e8a"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-079b3d8894490ca96"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    }
  ]
}